--- a/.github/workflows/user-api.yaml
+++ b/.github/workflows/user-api.yaml
@@ -23,3 +23,17 @@ jobs:
           cache-dependency-path: user-api/package-lock.json
       - run: yarn install
       - run: yarn lint
+
+  vulnerability:
+    name: Análise vulnerabilidade
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
+          cache: 'yarn'
+          cache-dependency-path: user-api/package-lock.json
+      - run: yarn install
+      - run: yarn audit
