--- a/user-api/package.json
+++ b/user-api/package.json
@@ -18,6 +18,7 @@
     "supertest": "^6.1.6"
   },
   "dependencies": {
+    "audit": "^0.0.6",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "eslint": ">=5.16.0",
